<resources>
    <string name="app_name">midterm</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="CreateNewAccount">Create New Account</string>
    <string name="Name">Name</string>
    <string name="Submit">Submit</string>
    <string name="Cancel">Cancel</string>
    <string name="Logout">Logout</string>
    <string name="app_categories_title">Forums</string>
    <string name="login_title">Login</string>
    <string name="Newforum">New Forum</string>
    <string name="forum_description_title">Forum Description</string>
    <string name="forum_hint">Forum Title</string>
    <string name="LogoutSuccess"> Logout Successful!!</string>
    <string name = "mandatory_fields">All fields all mandatory</string>
    <string name="invalid_credentials">Invalid Credentials</string>
    <string name="new_account_title">Create New Account</string>
    <string name="email_exists">This email-id already exists</string>
    <string name="error">Error! Something went wrong</string>
    <string name="comment"> Write Comment</string>
    <string name="Post">Post</string>
    <string name="forum_list_title">Forums</string>
    <string name="forum_details_title">Forum</string>

</resources>